chore(EventTemplates): prevent event template headers from getting clipped by ellipsis

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -46,3 +46,7 @@ html, body, #root {
 .cryostat-logo {
   height: 2em;
 }
+
+thead.event-templates-table-header  {
+  --pf-c-table--cell--Overflow: visible;
+}
